# FridgePinventory

./: .coverage  .coveragerc  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  config.yaml  deploy.sh  full_hardware_diagnostic.py  hardware_test.py  list_audio_devices.py  pyproject.toml
debug/: README.md  busy_test.py  env_check.py  mic_test.py  pin_probe.py  spi_loopback.py  test_pattern.py
migrations/: 000_migrations_tracking.sql  001_initial_schema.sql
src/pi_inventory_system/: __init__.py  audio_feedback.py  audio_feedback_manager.py  command_processor.py  config_manager.py  constants.py  create_migration.py  database_manager.py  diagnostic_cli.py  diagnostics.py  display_manager.py  exceptions.py  inventory_controller.py  inventory_db.py  inventory_item.py  item_normalizer.py  main.py  motion_loop.py  motion_sensor.py  motion_sensor_manager.py  platform_info.py  voice_grammar.py  voice_recognition.py  voice_recognition_manager.py  waveshare_display.py
src/pi_inventory_system/migrations/: 001_initial_schema.sql  002_inventory_last_modified_trigger.sql  003_inventory_history_action_id.sql  004_inventory_quantity_constraints.sql
tests/: conftest.py  test_audio_feedback.py  test_audio_feedback_manager.py  test_command_processor.py  test_command_processor_spacy.py  test_config_manager.py  test_database_manager.py  test_diagnostic_cli.py  test_diagnostics.py  test_display_manager.py  test_epd_driver.py  test_inventory_controller.py  test_inventory_db.py  test_inventory_item.py  test_item_normalizer.py  test_main.py  test_motion_loop.py  test_motion_sensor.py  test_parse_quantity.py  test_voice_grammar.py  test_voice_recognition.py  test_voice_recognition_manager.py
waveshare_drivers/: README.md  epd3in97.py  epdconfig.py
