[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi_inventory_system"
version = "0.1.0"
description = "Voice-controlled inventory management system for a chest freezer using Raspberry Pi"
authors = [
    {name = "Mike Cialowicz"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyaudio",
    "spacy",
    "speech_recognition",
    "word2number",
    "pyttsx3",
    "numpy",
]

[project.scripts]
fridgepinventory = "pi_inventory_system.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_inventory_system"] 