[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi_inventory_system"
version = "0.1.0"
description = "Voice-controlled inventory management system for a chest freezer using Raspberry Pi"
authors = [
    {name = "Mike Cialowicz"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyaudio",
    "spacy",
    "SpeechRecognition",
    "word2number",
    "pyttsx3",
    "numpy",
    "PyYAML",
    "Pillow",
    "playsound",
    "inky",
    "RPi.GPIO",
    "pocketsphinx",
    "spidev",
    "gpiozero",
]

[project.scripts]
fridgepinventory = "pi_inventory_system.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pi_inventory_system"]
