[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi_inventory_system"
version = "0.1.0"
description = "Voice-controlled inventory management system for a chest freezer using Raspberry Pi"
authors = [
    {name = "Mike Cialowicz"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "PyYAML",
    "SpeechRecognition",
    "numpy",
    "pyttsx3",
    "spacy",
    "word2number",
]

[project.optional-dependencies]
audio = [
    "pyaudio",
    "pocketsphinx",
    "simpleaudio",
]
hardware = [
    "RPi.GPIO ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "gpiozero ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "lgpio ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
fridgepinventory = "pi_inventory_system.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pi_inventory_system"]

[tool.hatch.build.targets.wheel.force-include]
"src/pi_inventory_system/migrations" = "pi_inventory_system/migrations"
